force-app/main/default/objects/JSON_Action__c/JSON_Action__c.object-meta.xml
<CustomObject>
    <label>JSON Action</label>
    <nameField>
        <displayFormat>JSON-{0000}</displayFormat>
        <label>JSON Action Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JSON Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>