force-app/main/default/objects/JSON_Action__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <referenceTo>Action__c</referenceTo>
    <relationshipLabel>JSON Actions</relationshipLabel>
    <relationshipName>JSON_Actions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>