force-app/main/default/objects/JSON_Action__c/fields/UniqueAction__c.field-meta.xml
<CustomField>
    <fullName>UniqueAction__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Enforces 1-1 relationship between JSON and Action.</description>
    <label>UniqueAction</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>