force-app/main/default/objects/JSON_Action__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>